--- a/.github/workflows/release-grunt.yml
+++ b/.github/workflows/release-grunt.yml
@@ -30,11 +30,11 @@ jobs:
         run: |
           echo Please generate a Grafana API key: https://grafana.com/docs/grafana/latest/developers/plugins/sign-a-plugin/#generate-an-api-key
           echo Once done please follow the instructions found here: https://github.com/$\{{github.repository}}/blob/main/README.md#using-github-actions-release-workflow
-        if: $\{{ env.GRAFANA_API_KEY == '' }}
+        if: ${{ env.GRAFANA_API_KEY == '' }}
 
       - name: Sign plugin
         run: yarn sign
-        if: $\{{ env.GRAFANA_API_KEY != '' }}
+        if: ${{ env.GRAFANA_API_KEY != '' }}
 
       - name: Get plugin metadata
         id: metadata
@@ -68,10 +68,10 @@ jobs:
         id: package-plugin
         run: |
           grunt
-          mv dist $\{{ steps.metadata.outputs.plugin-id }}
-          zip $\{{ steps.metadata.outputs.archive }} $\{{ steps.metadata.outputs.plugin-id }} -r
-          md5sum $\{{ steps.metadata.outputs.archive }} > $\{{ steps.metadata.outputs.archive-checksum }}
-          echo "checksum=$(cat ./$\{{ steps.metadata.outputs.archive-checksum }} | cut -d' ' -f1)" >> $GITHUB_OUTPUT
+          mv dist ${{ steps.metadata.outputs.plugin-id }}
+          zip ${{ steps.metadata.outputs.archive }} $\{{ steps.metadata.outputs.plugin-id }} -r
+          md5sum ${{ steps.metadata.outputs.archive }} > ${{ steps.metadata.outputs.archive-checksum }}
+          echo "checksum=$(cat ./${{ steps.metadata.outputs.archive-checksum }} | cut -d' ' -f1)" >> $GITHUB_OUTPUT
 
       - name: Validate plugin
         run: |
