--- a/.github/workflows/release-grunt.yml
+++ b/.github/workflows/release-grunt.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn install --immutable --prefer-offline
 
       - name: Build and test frontend
-        run: yarn build
+        run: yarn install
 
 
       - name: Warn missing Grafana API key
