--- a/.github/workflows/release-grunt.yml
+++ b/.github/workflows/release-grunt.yml
@@ -33,7 +33,9 @@ jobs:
         if: ${{ env.GRAFANA_API_KEY == '' }}
 
       - name: Sign plugin
-        run: yarn sign
+        run: ｜
+          npx @grafana/sign-plugin
+          yarn sign
         if: ${{ env.GRAFANA_API_KEY != '' }}
 
       - name: Get plugin metadata
