--- a/.github/workflows/release-grunt.yml
+++ b/.github/workflows/release-grunt.yml
@@ -34,8 +34,8 @@ jobs:
 
       - name: Sign plugin
         run: |
-          echo GRAFANA_API_KEY
-          yarn sign 
+          export GRAFANA_API_KEY=eyJrIjoiMGQxMThmMjAyYmE2NmE3MGNhZDA1YWMzNjVhZGFiMjFiYWYzMjQ2OSIsIm4iOiJwaW5nbWVzaCIsImlkIjo3OTI0NTR9
+          yarn sign --rootUrls http://127.0.0.1:3000 
         if: ${{ env.GRAFANA_API_KEY != '' }}
 
       - name: Get plugin metadata
